2-k3s/20.bread/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bread
  labels:
    app: bread
