2-k3s/20.bread/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bread
  namespace: bread
  labels:
    app: bread
spec:
  type: ClusterIP
  selector:
    app: bread
  ports:
    - name: http
      port: 8080
      targetPort: http
