2-k3s/20.bread/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bread-https
  namespace: bread
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bread.epaflix.com`)
      kind: Rule
      middlewares:
        - name: security-headers
          namespace: traefik-system
      services:
        - name: bread
          port: 8080
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bread-http
  namespace: bread
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`bread.epaflix.com`)
      kind: Rule
      middlewares:
        - name: redirect-https
          namespace: traefik-system
      services:
        - name: bread
          port: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bread-internal
  namespace: bread
spec:
  entryPoints:
    - internal
  routes:
    - match: Host(`bread.epaflix.com`)
      kind: Rule
      services:
        - name: bread
          port: 8080
  tls:
    certResolver: cloudflare
    domains:
      - main: epaflix.com
        sans:
          - "*.epaflix.com"
